[project]
name = "record-linkage-with-probabilistic-matching"
version = "0.1.0"
description = "Record linkage with probabilistic matching"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=38.0.0",
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
]
